# python-sdk

./: .gitignore  README.md  pyproject.toml
clawallex/: __init__.py
tests/: test_integration.py
